--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css">
     <script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js"></script> -->
 
-    鼠标点击效果
+    <!-- 鼠标点击效果 -->
     <script src="https://cdn.jsdelivr.net/gh/TRHX/CDN-for-itrhx.com@3.0.8/js/maodian.js"></script>
 
     <!-- <script type="text/javascript">
